2012-05-25  Joseph Myers  <joseph@codesourcery.com>

	[BZ #13717]
	* sysdeps/unix/sysv/linux/configure.in (arch_minimum_kernel): Set
	to 2.4.0 where earlier.
	* sysdeps/unix/sysv/linux/configure: Regenerated.
	* sysdeps/unix/sysv/linux/i386/chown.c: Do not include
	<kernel-features.h>.
	[__ASSUME_32BITUIDS]: Make code unconditional.
	[!__ASSUME_32BITUIDS]: Remove conditional code.
	* sysdeps/unix/sysv/linux/i386/fchown.c: Do not include
	<kernel-features.h>.
	[__ASSUME_32BITUIDS]: Make code unconditional.
	[!__ASSUME_32BITUIDS]: Remove conditional code.
	* sysdeps/unix/sysv/linux/i386/fchownat.c (fchownat)
	[__ASSUME_32BITUIDS]: Make code unconditional.
	(fchownat) [!__ASSUME_32BITUIDS]: Remove conditional code.
	* sysdeps/unix/sysv/linux/i386/getegid.c: Do not include
	<kernel-features.h>.
	[__ASSUME_32BITUIDS]: Make code unconditional.
	[!__ASSUME_32BITUIDS]: Remove conditional code.
	* sysdeps/unix/sysv/linux/i386/geteuid.c: Do not include
	<kernel-features.h>.
	[__ASSUME_32BITUIDS]: Make code unconditional.
	[!__ASSUME_32BITUIDS]: Remove conditional code.
	* sysdeps/unix/sysv/linux/i386/getgid.c: Do not include
	<kernel-features.h>.
	[__ASSUME_32BITUIDS]: Make code unconditional.
	[!__ASSUME_32BITUIDS]: Remove conditional code.
	* sysdeps/unix/sysv/linux/i386/getgroups.c: Do not include
	<kernel-features.h>.
	[__ASSUME_32BITUIDS]: Make code unconditional.
	[!__ASSUME_32BITUIDS]: Remove conditional code.
	* sysdeps/unix/sysv/linux/i386/getresgid.c: Do not include
	<kernel-features.h>.
	[__ASSUME_32BITUIDS]: Make code unconditional.
	[!__ASSUME_32BITUIDS]: Remove conditional code.
	* sysdeps/unix/sysv/linux/i386/getresuid.c: Do not include
	<kernel-features.h>.
	[__ASSUME_32BITUIDS]: Make code unconditional.
	[!__ASSUME_32BITUIDS]: Remove conditional code.
	* sysdeps/unix/sysv/linux/i386/getuid.c: Do not include
	<kernel-features.h>.
	[__ASSUME_32BITUIDS]: Make code unconditional.
	[!__ASSUME_32BITUIDS]: Remove conditional code.